--- a/templates/proveedor.html
+++ b/templates/proveedor.html
@@ -170,15 +170,15 @@
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="text" id="nombreProveedor" name="nombreProveedor" class="form-control validate" placeholder="Nombre Proveedor">
+                  <input type="text" id="nProveedor" name="nombreProveedor" class="form-control validate" placeholder="Nombre Proveedor">
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="text" id="calleProveedor" name="calleProveedor" class="form-control validate" placeholder="Calle Proveedor">
+                  <input type="text" id="cProveedor" name="calleProveedor" class="form-control validate" placeholder="Calle Proveedor">
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="number" id="telefonoProveedor" name="telefonoProveedor" class="form-control validate" placeholder="Teléfono Proveedor">
+                  <input type="number" id="tProveedor" name="telefonoProveedor" class="form-control validate" placeholder="Teléfono Proveedor">
                 </div>
 
               </div>
