--- a/templates/proveedor.html
+++ b/templates/proveedor.html
@@ -166,19 +166,19 @@
               <div class="modal-body mx-3">
 
                 <div class="md-form mb-5 d-none">
-                  <input type="text" id="idProveedor" name="idAP" class="d-none">
+                  <input type="text" id="idProveedor" name="idProveedor" class="d-none">
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="text" id="nProveedor" name="nombreProveedor" class="form-control validate" placeholder="Nombre Proveedor">
+                  <input type="text" id="nProveedor" name="nProveedor" class="form-control validate" placeholder="Nombre Proveedor">
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="text" id="cProveedor" name="calleProveedor" class="form-control validate" placeholder="Calle Proveedor">
+                  <input type="text" id="cProveedor" name="cProveedor" class="form-control validate" placeholder="Calle Proveedor">
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="number" id="tProveedor" name="telefonoProveedor" class="form-control validate" placeholder="Teléfono Proveedor">
+                  <input type="number" id="tProveedor" name="tProveedor" class="form-control validate" placeholder="Teléfono Proveedor">
                 </div>
 
               </div>
