--- a/templates/ventas.html
+++ b/templates/ventas.html
@@ -155,7 +155,7 @@
               </div>
 
               <div class="modal-footer d-flex justify-content-center">
-                <button id="crearCompra" class="btn btn btn-outline-primary my-2 my-sm-0">Crear</button>
+                <button id="crearVenta" class="btn btn btn-outline-primary my-2 my-sm-0">Crear</button>
               </div>
 
             </form>
