--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -66,6 +66,12 @@
 
                 </li>
 
+                <li class="nav-item">
+
+                  <span>INICIO</span>
+
+                </li>
+
               </ul>
 
               <form class="form-inline my-2 my-lg-0" action="/logout" method="post" role="form">
