--- a/templates/historicoCompras.html
+++ b/templates/historicoCompras.html
@@ -46,7 +46,7 @@
                     <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonVentas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ventas</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonVentas">
                       <a class="dropdown-item" href="/ventas.html">Crear</a>
-                      <a class="dropdown-item" href="#">Clientes</a>
+                      <a class="dropdown-item" href="/cliente.html">Clientes</a>
                     </div>
                   </div>
 
