--- a/templates/cliente.html
+++ b/templates/cliente.html
@@ -58,7 +58,7 @@
                     <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonVentas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ventas</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonVentas">
                       <a class="dropdown-item" href="/ventas.html">Crear</a>
-                      <a class="dropdown-item" href="#">Clientes</a>
+                      <a class="dropdown-item active" href="/cliente.html">Clientes</a>
                     </div>
                   </div>
 
@@ -70,7 +70,7 @@
                     <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonCompras" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonCompras">
                       <a class="dropdown-item" href="/compras.html">Crear</a>
-                      <a class="dropdown-item active" href="/Cliente.html">Cliente</a>
+                      <a class="dropdown-item" href="/proveedor.html">Proveedor</a>
                       <a class="dropdown-item" href="/historicoCompras.html">Histórico</a>
                     </div>
                   </div>
